Gjorde devDependencies til dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@navikt/eslint-config-teamia",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Setup av eslint-plugins med regler vi ønsker å bruke likt i alle våre prosjekter.",
   "main": "index.js",
   "files": [
@@ -23,7 +23,7 @@
     "url": "https://github.com/navikt/eslint-config-teamia/issues"
   },
   "homepage": "https://github.com/navikt/eslint-config-teamia#readme",
-  "devDependencies": {
+  "dependencies": {
     "eslint": ">= 8",
     "@navikt/eslint-config-teamia-a11y": ">= 1",
     "eslint-config-next": ">= 13.1",
