--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@navikt/eslint-config-teamia",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Setup av eslint-plugins med regler vi ønsker å bruke likt i alle våre prosjekter.",
   "main": "index.js",
   "files": [
@@ -29,7 +29,9 @@
     "eslint-config-next": ">= 13.1",
     "next": ">= 13.1",
     "eslint-plugin-react": ">= 7.32",
-    "@typescript-eslint/eslint-plugin": ">= 5.53",
+    "@typescript-eslint/eslint-plugin": ">= 5.59",
+    "@typescript-eslint/parser": ">= 5.59",
+    "eslint-plugin-jsx-a11y": ">= 6.7",
     "eslint-plugin-jest": ">= 27.2",
     "@next/eslint-plugin-next": ">= 13.1",
     "eslint-config-prettier": ">= 8.6",
